<resources>
    <string name="app_name">Best Of Lagos</string>
    <string name="location">Location</string>
    <string name="landmark">Landmark</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="mall">Malls</string>
    <string name="beaches">Beaches</string>
    <string name="history">History and Arts</string>
    <string name="parks_and_gardens">Parks and Nature</string>
    <string name="play_center">Play Center</string>
    <string name="night_clubs">Night Clubs</string>
    <string name="icm">Ikeja City Mall</string>
    <string name="leisure_mall">Leisure Mall</string>
    <string name="silverbird">Silverbird Galleria</string>
    <string name="the_palms">The Palms</string>
    <string name="maryland_mall">Maryland Mall</string>
    <string name="city_mall">Lagos City Mall</string>
    <string name="e_center">E centre</string>
    <string name="centro_mall">Centro Lekki Mall</string>
    <string name="novare_mall">Novare Mall</string>
    <string name="circle_mall">Circle Mall</string>
    <string name="tarkwa_bay">Tarkwa Bay</string>
    <string name="lekki_leisure">Lekki Leisure Lake</string>
    <string name="oniru_beach">Oniru Private Beach</string>
    <string name="inagbe_resort">Inagbe Grand Resort</string>
    <string name="alpha_beach">Alpha Beach</string>
    <string name="atican_beach">Atican Beach</string>
    <string name="eleko_beach">Eleko Beach</string>
    <string name="coconut_beach">Coconut Beach</string>
    <string name="halemson_beach">Halemson Beach</string>
    <string name="elegushi">Elegushi Beach</string>
    <string name="national_museum">National Mueseum</string>
    <string name="kalakuta_museum">Kalakuta Mueseum</string>
    <string name="national_theatre">National Theatre</string>
    <string name="new_afrika_shrine">New Afrika Shrine</string>
    <string name="badagry_museum">Badagry Black Heritage Museum</string>
    <string name="terra_kulture">Terra Kulture</string>
    <string name="nike_art">Nike Arts Gallery and Culture Center</string>
    <string name="jaekel_house">Jaekel House</string>
    <string name="thought_pyramid">Thought Pyramid and Arts Center</string>
    <string name="freedom_park">Freedom Park</string>
    <string name="lekki_conservation">Lekki Conservation Centre</string>
    <string name="jhalobia_park">Jhalobia Parks and Garden</string>
    <string name="eden_park">Eden Park</string>
    <string name="muri_okunola_park">Muri Okunola Park</string>
    <string name="lufasi_nature_park">Lufasi Nature Park</string>
    <string name="johnson_jakande_park">Johnson Jakande Tinubu Park</string>
    <string name="hi_impact">HI-Impact Planet</string>
    <string name="get_arena">GET Arena</string>
    <string name="ikoyi_club">Ikoyi Golf Club</string>
    <string name="xcite_park">Xcite Fun Park</string>
    <string name="rosellas_park">Rosellas Amusement Park</string>
    <string name="apapa_park">Apapa Amusement Park</string>
    <string name="dreamwork_africana">Dreamwork Africana</string>
    <string name="fun_factory">Fun Factory</string>
    <string name="tickle_bay">Tickle Bay</string>
    <string name="funtastica_land">Funtastica Land</string>
    <string name="club_quilox">Club Quilox</string>
    <string name="club_jazzhole">Jazzhole</string>
    <string name="club_escape">Escape Nightlife</string>
    <string name="club_57">Club 57</string>
    <string name="club_the_garage">The Garage by Caliente</string>
    <string name="club_vegas">Club Vegas</string>
    <string name="club_pravada">Club Pravada</string>
    <string name="club_cova_lounge">Cova Lounge</string>
    <string name="club_rumours">Rumours Night Club</string>
    <string name="club_cubana">Club Cubana</string>
    <string name="location_vi">Victoria island</string>
    <string name="location_lekki">Lekki</string>
    <string name="location_ikeja">Ikeja</string>
    <string name="location_badagry">Badagry</string>
    <string name="location_maryland">Maryland</string>
    <string name="location_surulere">Surulere</string>
    <string name="location_sangotedo">Sangotedo</string>
    <string name="location_ikoyi">Ikoyi</string>
    <string name="location_ojota">Ojota</string>
    <string name="location_onikan">Onikan</string>
    <string name="location_yaba">Yaba</string>
    <string name="location_lagos_island">Lagos Island"</string>
    <string name="location_iganmu">Iganmu</string>
    <string name="location_ebute_metta">Ebute Metta</string>
    <string name="location_oshodi">Oshodi</string>
    <string name="location_ibafo">Ibafo</string>
    <string name="location_onilu">Onilu Village</string>
    <string name="location_apapa">Apapa</string>
    <string name="location_ajah">Ajah</string>
    <string name="location_ilupeju">Ilupeju</string>
    <string name="about_mall_icm">The Ikeja City Mall is a mall located at Alausa in Ikeja, Lagos State. It is the first of its kind on the Mainland of Metropolitan Lagos. There is a Silverbird cinema in the mall as well shoprite, eateries, clothing brands and clothing stores and different bank ATMs.\n
        \nComprising 23,000m2 of A-grade retail space in Ikeja, a suburb of the city of Lagos and the capital of the state, ICM is an ultra-modern Shopping Centre in what is described as a dual economic state; residential but predominantly commercial. ICM is the choice retail destination in Lagos with a wide selection of national and international tenants.\n
        \nThe shopping center has a 5-screen Silverbird Cinemas (the first and only cinema theatre in Ikeja) and a Shoprite Supermarket. It also includes specialist facilities for department stores, banks, cafés, bars, restaurants, hairdressing / beauty salon, ice-skating arena, etc.\n</string>
    <string name="about_mall_leisure">Surrounded with misted glass exterior and interior open-air walkways, this is one of the most attractive and best family entertainment centre in Lagos, A favorite among the \'Mainlanders\' both for its proximity with Adeniran Ogunsanya Shopping Mall as well as housing the popular Filmhouse Cinemas, the mall delivers on its name: Leisure.\n
        \nEven though it is sited beside the popular Adeniran Ogunsanya Shopping Mall, Leisure Mall houses some unique brands that stands out, such as Mr Price, Filmhouse Cinemas, Bheerhugz Café, Barcelos, Nike among others. It has a link-bridge with the Adeniran Ogunsanya Shopping Mall to allow ease of movement between the two malls for customers.\n</string>
    <string name="about_mall_silverbird">Silverbird Galleria was established in 2004 by Silverbird Group, a media and real estate company founded by Ben Murray-Bruce in the 1980s. The movie theatre, Silverbird Cinemas which revolutionalized cinema in Nigeria pioneered the first five-screens Cineplex in sub-Saharan Africa.\n
        \nSilverbird Galleria has a shirts retailer, café and mobile network offices for feasible communication and internet access, all located on the ground floor. Electronic gadgets retailers and the Rhythm 93.7 FM broadcasting studio (operated by Silverbird) are on the first floor. The second floor has arcades and food services.
        The Silverbird Cinema is on the third and topmost floor. Additional services include a pharmacy, lounge and beauty shop \n</string>
    <string name="about_mall_the_palms">The Palms Shopping Mall is located on a 45,000-square-metre (11-acre) plot of land in Lekki, Lagos State. It has 21,000 square metres (5 acres) of lettable retail space. The mall was built on swampland that was reclaimed by the government recently and construction was commissioned by the Oba of Lagos and former President Obasanjo. The mall, which opened in late 2005, has 69 stores and a modern six screen cinema. There is parking space for about 1000 cars.\n
        \nThe Palms Shopping Mall (up until Polo park opens in Enugu) is the second largest shopping mall by gross leasable area after Ado Bayero Mall located in Kano and first of its kind in Nigeria. The mall is owned by Persianas Properties Limited (Part of the Persianas Group), promoted by Nigerian Businessman Tayo Amusan, a Nigerian property developer.\n
        \nThe Anchor Tenants at the mall are South African Giants: Game and ShopRite and The Hub Media Store. The line shops, which range in size between 28-590 square metres (300-6,400 square feet) come in different widespread categories of diverse merchandise and services.\n
        \nGame (part of the Massmart Group - recently taken over by Walmart) a discount retail chain occupies the largest space at about 5495 square metres. ShopRite, which labels itself as African’s largest grocery store opened their first store in Nigeria at The Palms and The Hub Media Store - Nigeria's largest media store operates on the upper floor.\n
        \nGenesis Deluxe Cinemas operates a 6 screen cinema on the upper floor showing both international and Nigerian movies.</string>
    <string name="about_mall_maryland">Strategically located to conveniently serve the shopping and leisure needs of Maryland, Mende, Ikeja, Anthony and Ilupeju environs, Maryland Mall offers you a new refreshing shopping and leisure experience on the mainland. The carefully designed masterpiece will be home to over 50 shopping outlets, banks, restaurants, a supermarket and a state of the art cinema facility all carefully selected with your leisure and shopping needs in mind.\n
        \nMaryland Mall has been designed with a vision similar to that which built the city of Dubai: "build it and they shall come!". This thinking is engraved in the architectural design of the building, the careful selection of leisure and shopping outlets to be located within the mall; and the fact that the mall hoists the largest digital LED screen in Sub-Saharan Africa. Visible to both sides of the voluminous Ikorodu Road traffic, this screen is guaranteed to be a must-see major landmark on the mainland.\n
        \nThe Maryland Mall has been designed with every bit of your comfort and convenience in mind. It's convenient location, internal ambience, exterior illumination and generous parking facilities have been carefully designed to ensure every visit to the Maryland Mall will leave you longing for the next.</string>
    <string name="about_mall_city">The Lagos City Mall is a modern shopping centre located in Onikan, Lagos Island. It is in proximity to many prominent Lagos landmarks such as the Muson Centre, the Tafawa Balewa Square, Onikan Stadium, the National Museum and the Radisson Blu Anchorage Hotel, Victoria Island.\n
        \nFacilities at the City Mall in Lagos include:\n
        \n- 50 shops, including designer and high street boutiques.
        \n- Three restaurants on the second floor.
        \n- Children\'s play area.
        \n- Two cinemas, all on the second floor.
        \n- Central air-conditioning system.
        \n- Parking for about 300 cars.
    </string>
</resources>